--- a/tools/CustomBuildTool/CustomBuildTool.csproj
+++ b/tools/CustomBuildTool/CustomBuildTool.csproj
@@ -1,7 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <AssemblyName>CustomBuildTool</AssemblyName>
         <OutputType>Exe</OutputType>
         <Platforms>x64;x86</Platforms>
         <PublishTrimmed>true</PublishTrimmed>
@@ -9,20 +8,21 @@
         <PublishSingleFile>true</PublishSingleFile>
         <PublishReadyToRunShowWarnings>true</PublishReadyToRunShowWarnings>
         <TargetFramework>netcoreapp3.0</TargetFramework>
-        <OutDir>$(SolutionDir)bin\$(Configuration)$(PlatformArchitecture)\$(TargetFramework)\</OutDir>
-        <IntDir>$(SolutionDir)obj\$(Configuration)$(PlatformArchitecture)\$(TargetFramework)\</IntDir>
+        <RuntimeIdentifiers>win-x86;win-x64</RuntimeIdentifiers>
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(Platform)'=='x86'">
         <PlatformTarget>x86</PlatformTarget>
-        <RuntimeIdentifiers>win-x86</RuntimeIdentifiers>
         <RuntimeIdentifier>win-x86</RuntimeIdentifier>
+        <IntDir>$(SolutionDir)obj\$(Configuration)\$(TargetFramework)-$(PlatformTarget)\</IntDir>
+        <OutDir>$(SolutionDir)bin\$(Configuration)\$(TargetFramework)-$(PlatformTarget)\</OutDir>
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(Platform)'=='x64'">
         <PlatformTarget>x64</PlatformTarget>
-        <RuntimeIdentifiers>win-x64</RuntimeIdentifiers>
         <RuntimeIdentifier>win-x64</RuntimeIdentifier>
+        <IntDir>$(SolutionDir)obj\$(Configuration)\\$(TargetFramework)-$(PlatformTarget)\</IntDir>
+        <OutDir>$(SolutionDir)bin\$(Configuration)\\$(TargetFramework)-$(PlatformTarget)\</OutDir>
     </PropertyGroup>
     
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x86'">
