--- a/tools/CustomBuildTool/CustomBuildTool.csproj
+++ b/tools/CustomBuildTool/CustomBuildTool.csproj
@@ -15,15 +15,15 @@
     <PropertyGroup Condition="'$(Platform)'=='x86'">
         <PlatformTarget>x86</PlatformTarget>
         <RuntimeIdentifier>win-x86</RuntimeIdentifier>
-        <IntDir>$(SolutionDir)obj\$(Configuration)\$(TargetFramework)-$(PlatformTarget)\</IntDir>
-        <OutDir>$(SolutionDir)bin\$(Configuration)\$(TargetFramework)-$(PlatformTarget)\</OutDir>
+        <IntDir>$(ProjectDir)obj\$(Configuration)\$(TargetFramework)-$(PlatformTarget)\</IntDir>
+        <OutDir>$(ProjectDir)bin\$(Configuration)\$(TargetFramework)-$(PlatformTarget)\</OutDir>
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(Platform)'=='x64'">
         <PlatformTarget>x64</PlatformTarget>
         <RuntimeIdentifier>win-x64</RuntimeIdentifier>
-        <IntDir>$(SolutionDir)obj\$(Configuration)\\$(TargetFramework)-$(PlatformTarget)\</IntDir>
-        <OutDir>$(SolutionDir)bin\$(Configuration)\\$(TargetFramework)-$(PlatformTarget)\</OutDir>
+        <IntDir>$(ProjectDir)obj\$(Configuration)\\$(TargetFramework)-$(PlatformTarget)\</IntDir>
+        <OutDir>$(ProjectDir)bin\$(Configuration)\\$(TargetFramework)-$(PlatformTarget)\</OutDir>
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x86'">
@@ -41,10 +41,13 @@
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
         <DefineConstants />
         <DebugType>portable</DebugType>
+        <DebugSymbols>false</DebugSymbols>
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x86'">
         <DefineConstants />
+        <DebugType>portable</DebugType>
+        <DebugSymbols>false</DebugSymbols>
     </PropertyGroup>
 
     <ItemGroup>
