--- a/ProcessHacker/ProcessHacker.vcxproj.filters
+++ b/ProcessHacker/ProcessHacker.vcxproj.filters
@@ -387,6 +387,12 @@
     <ClCompile Include="pcre\pcre2_extuni.c">
       <Filter>PCRE</Filter>
     </ClCompile>
+    <ClCompile Include="pcre\pcre2_convert.c">
+      <Filter>Process Hacker</Filter>
+    </ClCompile>
+    <ClCompile Include="pcre\pcre2_script_run.c">
+      <Filter>Process Hacker</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\hidnproc.h">
