--- a/ProcessHacker/ProcessHacker.vcxproj
+++ b/ProcessHacker/ProcessHacker.vcxproj
@@ -262,6 +262,7 @@
     <ClCompile Include="infodlg.c" />
     <ClCompile Include="itemtips.c" />
     <ClCompile Include="jobprp.c" />
+    <ClCompile Include="kdump.c" />
     <ClCompile Include="log.c" />
     <ClCompile Include="logwnd.c" />
     <ClCompile Include="main.c" />
