--- a/ProcessHacker/ProcessHacker.rc
+++ b/ProcessHacker/ProcessHacker.rc
@@ -1310,15 +1310,17 @@ STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Run"
 FONT 9, "Segoe UI", 0, 0, 0x1
 BEGIN
-    ICON            100,IDC_FILEICON,7,11,18,17
+    ICON            100,IDC_FILEICON,7,11,20,20
     LTEXT           "Type the name of a program, folder, document, or Internet resource, and Windows will open it for you.",IDC_STATIC,36,11,182,22
     LTEXT           "&Open:",IDC_STATIC,7,39,28,10
     COMBOBOX        IDC_PROGRAMCOMBO,36,37,183,200,CBS_DROPDOWN | CBS_AUTOHSCROLL | CBS_DISABLENOSCROLL | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "Create this task with administrative privileges.",IDC_TOGGLEELEVATION,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,40,50,180,10
     DEFPUSHBUTTON   "OK",IDOK,62,82,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,116,82,50,14
     PUSHBUTTON      "&Browse...",IDC_BROWSE,170,82,50,14
+    CONTROL         "Create this task with Trusted Installer privileges.",IDC_TRUSTEDINSTALLER,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,40,62,180,10
+    CONTROL         "Create this task with administrative privileges.",IDC_TOGGLEELEVATION,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,40,51,180,10
 END
 
 IDD_LIVEDUMP DIALOGEX 0, 0, 191, 97
