--- a/ProcessHacker/ProcessHacker.vcxproj.filters
+++ b/ProcessHacker/ProcessHacker.vcxproj.filters
@@ -387,14 +387,14 @@
     <ClCompile Include="pcre\pcre2_extuni.c">
       <Filter>PCRE</Filter>
     </ClCompile>
-    <ClCompile Include="pcre\pcre2_convert.c">
-      <Filter>Process Hacker</Filter>
-    </ClCompile>
-    <ClCompile Include="pcre\pcre2_script_run.c">
-      <Filter>Process Hacker</Filter>
-    </ClCompile>
     <ClCompile Include="kdump.c">
       <Filter>Process Hacker</Filter>
+    </ClCompile>
+    <ClCompile Include="pcre\pcre2_convert.c">
+      <Filter>PCRE</Filter>
+    </ClCompile>
+    <ClCompile Include="pcre\pcre2_script_run.c">
+      <Filter>PCRE</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
