--- a/plugins/Updater/Updater.rc
+++ b/plugins/Updater/Updater.rc
@@ -50,13 +50,15 @@ END
 // Dialog
 //
 
-IDD_OPTIONS DIALOGEX 0, 0, 157, 34
+IDD_OPTIONS DIALOGEX 0, 0, 217, 47
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Updater Options"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     CONTROL         "Check for updates automatically",IDC_AUTOCHECKBOX,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,7,142,10
+    CONTROL         "Show update prompt after closing main window",IDC_AUTOCHECKBOX2,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,20,203,10
 END
 
 IDD_TEXT DIALOGEX 0, 0, 309, 176
@@ -80,9 +82,9 @@ BEGIN
     IDD_OPTIONS, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 150
+        RIGHTMARGIN, 210
         TOPMARGIN, 7
-        BOTTOMMARGIN, 27
+        BOTTOMMARGIN, 40
     END
 
     IDD_TEXT, DIALOG
