--- a/tools/peview/peview.vcxproj.filters
+++ b/tools/peview/peview.vcxproj.filters
@@ -102,6 +102,9 @@
     <ClCompile Include="tlsprp.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="previewprp.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\peview.h">
