--- a/tools/peview/peview.rc
+++ b/tools/peview/peview.rc
@@ -150,6 +150,14 @@ BEGIN
         TOPMARGIN, 7
         BOTTOMMARGIN, 169
     END
+
+    IDD_PEPREVIEW, DIALOG
+    BEGIN
+        LEFTMARGIN, 2
+        RIGHTMARGIN, 299
+        TOPMARGIN, 2
+        BOTTOMMARGIN, 278
+    END
 END
 #endif    // APSTUDIO_INVOKED
 
@@ -360,6 +368,14 @@ BEGIN
     LTEXT           "Application font:",IDC_STATIC,121,25,54,8
     LTEXT           "Symbol path:",IDC_STATIC,7,8,43,8
     EDITTEXT        IDC_DBGHELPSEARCHPATH,61,7,241,12,ES_AUTOHSCROLL
+END
+
+IDD_PEPREVIEW DIALOGEX 0, 0, 301, 280
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Preview"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    EDITTEXT        IDC_PREVIEW,2,2,297,276,ES_MULTILINE | ES_READONLY | WS_VSCROLL | NOT WS_TABSTOP
 END
 
 
