--- a/tools/peview/peview.rc
+++ b/tools/peview/peview.rc
@@ -236,10 +236,12 @@ BEGIN
     EDITTEXT        IDC_FLAGS,76,19,217,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
     LTEXT           "Version String:",IDC_STATIC,7,32,48,8
     LTEXT           "Static",IDC_VERSIONSTRING,78,32,215,8
-    CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,69,286,204
-    LTEXT           "Sections:",IDC_STATIC,7,58,30,8
-    LTEXT           "MVID:",IDC_STATIC,7,44,21,8
+    CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,84,286,189
+    LTEXT           "Sections:",IDC_STATIC,7,73,30,8
+    LTEXT           "MVID:",IDC_STATIC,7,45,21,8
     EDITTEXT        IDC_MVIDSTRING,76,45,217,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    LTEXT           "PublicKeyToken:",IDC_STATIC,7,59,59,8
+    EDITTEXT        IDC_TOKENSTRING,76,59,217,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
 END
 
 IDD_PELOADCONFIG DIALOGEX 0, 0, 300, 280
