Add native image path to process properties

--- a/ProcessHacker/ProcessHacker.rc
+++ b/ProcessHacker/ProcessHacker.rc
@@ -77,39 +77,43 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSM
 CAPTION "General"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    PUSHBUTTON      "Permissions",IDC_PERMISSIONS,143,197,50,14
-    PUSHBUTTON      "Terminate",IDC_TERMINATE,197,197,50,14
-    GROUPBOX        "File",IDC_FILE,7,7,246,79
-    ICON            "",IDC_FILEICON,14,18,20,20
+    PUSHBUTTON      "Permissions",IDC_PERMISSIONS,143,218,50,14
+    PUSHBUTTON      "Terminate",IDC_TERMINATE,197,218,50,14
+    GROUPBOX        "File",IDC_FILE,7,7,246,103
+    ICON            "",IDC_FILEICON,14,18,21,20
     EDITTEXT        IDC_NAME,44,17,182,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
     EDITTEXT        IDC_COMPANYNAME,44,29,183,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
     CONTROL         "<a>Company name link</a>",IDC_COMPANYNAME_LINK,"SysLink",LWS_NOPREFIX | NOT WS_VISIBLE | WS_TABSTOP,46,29,183,9
     LTEXT           "Version:",IDC_STATIC,15,41,27,8
     EDITTEXT        IDC_VERSION,44,41,113,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    LTEXT           "Image file name:",IDC_STATIC,15,55,56,8
+    LTEXT           "Image file name (Win32):",IDC_STATIC,15,55,86,8
     EDITTEXT        IDC_FILENAME,15,65,191,12,ES_AUTOHSCROLL | ES_READONLY
     PUSHBUTTON      "Inspect",IDC_INSPECT,210,64,17,15,BS_ICON
     PUSHBUTTON      "Open",IDC_OPENFILENAME,230,64,17,15,BS_ICON
-    GROUPBOX        "Process",IDC_PROCESS,7,92,246,161
-    LTEXT           "Command line:",IDC_STATIC,13,103,50,8
-    EDITTEXT        IDC_CMDLINE,79,101,147,12,ES_AUTOHSCROLL | ES_READONLY
-    LTEXT           "Current directory:",IDC_STATIC,13,119,60,8
-    EDITTEXT        IDC_CURDIR,79,117,168,12,ES_AUTOHSCROLL | ES_READONLY
-    LTEXT           "Started:",IDC_STATIC,13,135,28,8
-    EDITTEXT        IDC_STARTED,79,133,168,12,ES_AUTOHSCROLL | ES_READONLY
-    LTEXT           "PEB address:",IDC_STATIC,13,151,44,8
-    EDITTEXT        IDC_PEBADDRESS,79,149,101,12,ES_AUTOHSCROLL | ES_READONLY
-    LTEXT           "Image type:",IDC_PROCESSTYPELABEL,185,151,41,8,NOT WS_VISIBLE
-    LTEXT           "32-bit",IDC_PROCESSTYPETEXT,228,151,20,8,NOT WS_VISIBLE
-    LTEXT           "Parent:",IDC_STATIC,13,167,25,8
-    EDITTEXT        IDC_PARENTPROCESS,79,165,147,12,ES_AUTOHSCROLL | ES_READONLY
-    PUSHBUTTON      "View",IDC_VIEWPARENTPROCESS,230,163,17,15,BS_ICON
-    LTEXT           "Mitigation policies:",IDC_STATIC,13,183,59,8
-    EDITTEXT        IDC_MITIGATION,79,181,126,12,ES_AUTOHSCROLL | ES_READONLY
-    PUSHBUTTON      "Details",IDC_VIEWMITIGATION,209,180,38,14
-    LTEXT           "Protection:",IDC_STATIC,13,200,36,8
-    EDITTEXT        IDC_PROTECTION,51,200,80,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    PUSHBUTTON      "View",IDC_VIEWCOMMANDLINE,230,100,17,15,BS_ICON
+    GROUPBOX        "Process",IDC_PROCESS,7,115,246,139
+    LTEXT           "Command line:",IDC_STATIC,13,124,50,8
+    EDITTEXT        IDC_CMDLINE,79,122,147,12,ES_AUTOHSCROLL | ES_READONLY
+    LTEXT           "Current directory:",IDC_STATIC,13,140,60,8
+    EDITTEXT        IDC_CURDIR,79,138,168,12,ES_AUTOHSCROLL | ES_READONLY
+    LTEXT           "Started:",IDC_STATIC,13,156,28,8
+    EDITTEXT        IDC_STARTED,79,154,168,12,ES_AUTOHSCROLL | ES_READONLY
+    LTEXT           "PEB address:",IDC_STATIC,13,172,44,8
+    EDITTEXT        IDC_PEBADDRESS,79,170,101,12,ES_AUTOHSCROLL | ES_READONLY
+    LTEXT           "Image type:",IDC_PROCESSTYPELABEL,185,172,41,8,NOT WS_VISIBLE
+    LTEXT           "32-bit",IDC_PROCESSTYPETEXT,228,172,20,8,NOT WS_VISIBLE
+    LTEXT           "Parent:",IDC_STATIC,13,188,25,8
+    EDITTEXT        IDC_PARENTPROCESS,79,186,147,12,ES_AUTOHSCROLL | ES_READONLY
+    PUSHBUTTON      "View",IDC_VIEWPARENTPROCESS,230,185,17,15,BS_ICON
+    LTEXT           "Mitigation policies:",IDC_STATIC,13,204,59,8
+    EDITTEXT        IDC_MITIGATION,79,202,126,12,ES_AUTOHSCROLL | ES_READONLY
+    PUSHBUTTON      "Details",IDC_VIEWMITIGATION,209,202,38,14
+    LTEXT           "Protection:",IDC_STATIC,13,222,36,8
+    EDITTEXT        IDC_PROTECTION,51,222,80,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    PUSHBUTTON      "View",IDC_VIEWCOMMANDLINE,230,122,17,15,BS_ICON
+    LTEXT           "Image file name:",IDC_STATIC,15,80,86,8
+    EDITTEXT        IDC_FILENAMEWIN32,15,91,191,12,ES_AUTOHSCROLL | ES_READONLY
+    PUSHBUTTON      "Inspect",IDC_INSPECT2,210,89,17,15,BS_ICON
+    PUSHBUTTON      "Open",IDC_OPENFILENAME2,230,89,17,15,BS_ICON
 END
 
 IDD_PROCMODULES DIALOGEX 0, 0, 260, 260
@@ -1350,7 +1354,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 253
         TOPMARGIN, 7
-        BOTTOMMARGIN, 253
+        BOTTOMMARGIN, 254
     END
 
     IDD_PROCMODULES, DIALOG
