Update pagefile dialog #526

--- a/ProcessHacker/ProcessHacker.rc
+++ b/ProcessHacker/ProcessHacker.rc
@@ -326,13 +326,13 @@ BEGIN
 END
 
 IDD_PAGEFILES DIALOGEX 0, 0, 322, 162
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+STYLE DS_SETFONT | DS_FIXEDSYS | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 CAPTION "Pagefiles"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,7,7,308,128
-    PUSHBUTTON      "Refresh",IDC_REFRESH,211,141,50,14
-    DEFPUSHBUTTON   "Close",IDOK,265,141,50,14
+    CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,2,2,318,142
+    PUSHBUTTON      "Refresh",IDC_REFRESH,215,146,50,14
+    DEFPUSHBUTTON   "Close",IDOK,269,146,50,14
 END
 
 IDD_TOKGENERAL DIALOGEX 0, 0, 270, 228
@@ -1475,10 +1475,10 @@ BEGIN
 
     IDD_PAGEFILES, DIALOG
     BEGIN
-        LEFTMARGIN, 7
-        RIGHTMARGIN, 315
-        TOPMARGIN, 7
-        BOTTOMMARGIN, 155
+        LEFTMARGIN, 2
+        RIGHTMARGIN, 320
+        TOPMARGIN, 2
+        BOTTOMMARGIN, 160
     END
 
     IDD_TOKGENERAL, DIALOG
