peview: Add PE directories tab

--- a/tools/peview/peview.rc
+++ b/tools/peview/peview.rc
@@ -158,6 +158,10 @@ BEGIN
         TOPMARGIN, 2
         BOTTOMMARGIN, 278
     END
+
+    IDD_PEDIRECTORY, DIALOG
+    BEGIN
+    END
 END
 #endif    // APSTUDIO_INVOKED
 
@@ -378,6 +382,14 @@ CAPTION "Preview"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     EDITTEXT        IDC_PREVIEW,2,2,297,276,ES_MULTILINE | ES_READONLY | WS_VSCROLL | NOT WS_TABSTOP
+END
+
+IDD_PEDIRECTORY DIALOGEX 0, 0, 300, 280
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Directories"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_TABSTOP,0,0,300,280
 END
 
 
