--- a/tools/peview/peview.vcxproj
+++ b/tools/peview/peview.vcxproj
@@ -240,6 +240,7 @@
     <ClCompile Include="misc.c" />
     <ClCompile Include="pdb.c" />
     <ClCompile Include="pdbprp.c" />
+    <ClCompile Include="pedirprp.c" />
     <ClCompile Include="peprp.c" />
     <ClCompile Include="previewprp.c" />
     <ClCompile Include="processes.c" />
