--- a/plugins/WindowExplorer/WindowExplorer.rc
+++ b/plugins/WindowExplorer/WindowExplorer.rc
@@ -55,6 +55,7 @@ CAPTION "Windows"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     PUSHBUTTON      "Refresh",IDC_REFRESH,2,3,50,14
+    PUSHBUTTON      "Find window",IDC_FINDWINDOW,54,3,50,14
     CONTROL         "Windows",IDC_LIST,"PhTreeNew",WS_CLIPSIBLINGS | WS_CLIPCHILDREN | 0x2,2,19,443,288,WS_EX_CLIENTEDGE
     EDITTEXT        IDC_SEARCHEDIT,302,3,143,14,ES_AUTOHSCROLL
 END
